--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,32 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-
+  
+ <build>
+	  <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.0</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+      <plugin>
+	    <groupId>org.apache.maven.plugins</groupId>
+	    <artifactId>maven-jar-plugin</artifactId>
+	    <version>2.6</version>
+	    <configuration>
+	        <archive>
+	            <manifest>
+	                <mainClass>com.throwner.App</mainClass>
+	            </manifest>
+	        </archive>
+	    </configuration>
+	  </plugin>
+    </plugins>
+</build>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -22,4 +47,7 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  
+
+
 </project>
