--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,19 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+    
+        <!-- logging -->
+    <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-api</artifactId>
+        <version>2.8.2</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+        <version>2.8.2</version>
+    </dependency>
   </dependencies>
   
 
